--- a/demo/src/main/resources/templates/today.html
+++ b/demo/src/main/resources/templates/today.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://thymleaf.org">
+<html lang="en" xmlns="http://thymleaf.org" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8" />
     <title>Today</title>
